--- a/hugo.toml
+++ b/hugo.toml
@@ -67,7 +67,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     # you can add extra information after the name (HTML format is supported), such as icons
     # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
     post = ""
-    name = "Posts"
+    name = "所有文章"
     url = "/posts/"
     # title will be shown when you hover on this menu link
     # 当您将鼠标悬停在此菜单链接上时, 将显示标题
@@ -77,7 +77,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     identifier = "tags"
     pre = ""
     post = ""
-    name = "Tags"
+    name = "标签"
     url = "/tags/"
     title = ""
   [[menu.main]]
@@ -85,9 +85,25 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     identifier = "categories"
     pre = ""
     post = ""
-    name = "Categories"
+    name = "分类"
     url = "/categories/"
     title = ""
+  [[menu.main]]
+    weight = 4
+    identifier = "about"
+    pre = ""
+    post = ""
+    name = "关于"
+    url = "/about/"
+    title = ""
+  [[menu.main]]
+    weight = 5
+    identifier = "github"
+    pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
+    post = ""
+    name = ""
+    url = "https://github.com/YukiIsait/Blog/"
+    title = "GitHub"
 
 [params]
   # site default theme ["auto", "light", "dark"]
@@ -222,7 +238,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     enable = true
     # type of search engine ["lunr", "algolia"]
     # 搜索引擎的类型 ["lunr", "algolia"]
-    type = "algolia"
+    type = "lunr"
     # max index length of the chunked content
     # 文章内容最长索引长度
     contentLength = 4000
@@ -789,149 +805,149 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 
 # Multilingual
 # 多语言
-[languages]
-  [languages.en]
-    weight = 1
-    languageCode = "en"
-    languageName = "English"
-    hasCJKLanguage = false
-    copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
-    [languages.en.menu]
-      [[languages.en.menu.main]]
-        weight = 1
-        identifier = "posts"
-        pre = ""
-        post = ""
-        name = "Posts"
-        url = "/posts/"
-        title = ""
-      [[languages.en.menu.main]]
-        weight = 2
-        identifier = "tags"
-        pre = ""
-        post = ""
-        name = "Tags"
-        url = "/tags/"
-        title = ""
-      [[languages.en.menu.main]]
-        weight = 3
-        identifier = "categories"
-        pre = ""
-        post = ""
-        name = "Categories"
-        url = "/categories/"
-        title = ""
-      [[languages.en.menu.main]]
-        weight = 4
-        identifier = "about"
-        pre = ""
-        post = ""
-        name = "About"
-        url = "/about/"
-        title = ""
-      [[languages.en.menu.main]]
-        weight = 5
-        identifier = "github"
-        pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
-        post = ""
-        name = ""
-        url = "https://github.com/YukiIsait/Blog/"
-        title = "GitHub"
-    [languages.en.params]
-      [languages.en.params.search]
-        enable = true
-        type = "algolia"
-        contentLength = 4000
-        placeholder = ""
-        maxResultLength = 10
-        snippetLength = 30
-        highlightTag = "em"
-        absoluteURL = false
-        [languages.en.params.search.algolia]
-          index = ""
-          appID = ""
-          searchKey = ""
-      [languages.en.params.home]
-        rss = 10
-        [languages.en.params.home.profile]
-          enable = true
-          gravatarEmail = ""
-          avatarURL = "/images/avatar.png"
-          title = ""
-          subtitle = "A Personal Space for Sharing, Self-Improvement, and Lifelong Learning"
-          typeit = true
-          social = true
-          disclaimer = ""
+# [languages]
+  # [languages.en]
+  #   weight = 1
+  #   languageCode = "en"
+  #   languageName = "English"
+  #   hasCJKLanguage = false
+  #   copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
+  #   [languages.en.menu]
+  #     [[languages.en.menu.main]]
+  #       weight = 1
+  #       identifier = "posts"
+  #       pre = ""
+  #       post = ""
+  #       name = "Posts"
+  #       url = "/posts/"
+  #       title = ""
+  #     [[languages.en.menu.main]]
+  #       weight = 2
+  #       identifier = "tags"
+  #       pre = ""
+  #       post = ""
+  #       name = "Tags"
+  #       url = "/tags/"
+  #       title = ""
+  #     [[languages.en.menu.main]]
+  #       weight = 3
+  #       identifier = "categories"
+  #       pre = ""
+  #       post = ""
+  #       name = "Categories"
+  #       url = "/categories/"
+  #       title = ""
+  #     [[languages.en.menu.main]]
+  #       weight = 4
+  #       identifier = "about"
+  #       pre = ""
+  #       post = ""
+  #       name = "About"
+  #       url = "/about/"
+  #       title = ""
+  #     [[languages.en.menu.main]]
+  #       weight = 5
+  #       identifier = "github"
+  #       pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
+  #       post = ""
+  #       name = ""
+  #       url = "https://github.com/YukiIsait/Blog/"
+  #       title = "GitHub"
+  #   [languages.en.params]
+  #     [languages.en.params.search]
+  #       enable = true
+  #       type = "algolia"
+  #       contentLength = 4000
+  #       placeholder = ""
+  #       maxResultLength = 10
+  #       snippetLength = 30
+  #       highlightTag = "em"
+  #       absoluteURL = false
+  #       [languages.en.params.search.algolia]
+  #         index = ""
+  #         appID = ""
+  #         searchKey = ""
+  #     [languages.en.params.home]
+  #       rss = 10
+  #       [languages.en.params.home.profile]
+  #         enable = true
+  #         gravatarEmail = ""
+  #         avatarURL = "/images/avatar.png"
+  #         title = ""
+  #         subtitle = "A Personal Space for Sharing, Self-Improvement, and Lifelong Learning"
+  #         typeit = true
+  #         social = true
+  #         disclaimer = ""
 
-  [languages.zh-cn]
-    weight = 2
-    languageCode = "zh-CN"
-    languageName = "简体中文"
-    hasCJKLanguage = true
-    copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
-    [languages.zh-cn.menu]
-      [[languages.zh-cn.menu.main]]
-        weight = 1
-        identifier = "posts"
-        pre = ""
-        post = ""
-        name = "所有文章"
-        url = "/posts/"
-        title = ""
-      [[languages.zh-cn.menu.main]]
-        weight = 2
-        identifier = "tags"
-        pre = ""
-        post = ""
-        name = "标签"
-        url = "/tags/"
-        title = ""
-      [[languages.zh-cn.menu.main]]
-        weight = 3
-        identifier = "categories"
-        pre = ""
-        post = ""
-        name = "分类"
-        url = "/categories/"
-        title = ""
-      [[languages.zh-cn.menu.main]]
-        weight = 4
-        identifier = "about"
-        pre = ""
-        post = ""
-        name = "关于"
-        url = "/about/"
-        title = ""
-      [[languages.zh-cn.menu.main]]
-        weight = 5
-        identifier = "github"
-        pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
-        post = ""
-        name = ""
-        url = "https://github.com/YukiIsait/Blog/"
-        title = "GitHub"
-    [languages.zh-cn.params]
-      [languages.zh-cn.params.search]
-        enable = true
-        type = "algolia"
-        contentLength = 4000
-        placeholder = ""
-        maxResultLength = 10
-        snippetLength = 50
-        highlightTag = "em"
-        absoluteURL = false
-        [languages.zh-cn.params.search.algolia]
-          index = ""
-          appID = ""
-          searchKey = ""
-      [languages.zh-cn.params.home]
-        rss = 10
-        [languages.zh-cn.params.home.profile]
-          enable = true
-          gravatarEmail = ""
-          avatarURL = "/images/avatar.png"
-          title = ""
-          subtitle = "记录分享，自我提升与学习成长的自留地"
-          typeit = true
-          social = true
-          disclaimer = ""
+  # [languages.zh-cn]
+  #   weight = 1
+  #   languageCode = "zh-CN"
+  #   languageName = "简体中文"
+  #   hasCJKLanguage = true
+  #   copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
+  #   [languages.zh-cn.menu]
+  #     [[languages.zh-cn.menu.main]]
+  #       weight = 1
+  #       identifier = "posts"
+  #       pre = ""
+  #       post = ""
+  #       name = "所有文章"
+  #       url = "/posts/"
+  #       title = ""
+  #     [[languages.zh-cn.menu.main]]
+  #       weight = 2
+  #       identifier = "tags"
+  #       pre = ""
+  #       post = ""
+  #       name = "标签"
+  #       url = "/tags/"
+  #       title = ""
+  #     [[languages.zh-cn.menu.main]]
+  #       weight = 3
+  #       identifier = "categories"
+  #       pre = ""
+  #       post = ""
+  #       name = "分类"
+  #       url = "/categories/"
+  #       title = ""
+  #     [[languages.zh-cn.menu.main]]
+  #       weight = 4
+  #       identifier = "about"
+  #       pre = ""
+  #       post = ""
+  #       name = "关于"
+  #       url = "/about/"
+  #       title = ""
+  #     [[languages.zh-cn.menu.main]]
+  #       weight = 5
+  #       identifier = "github"
+  #       pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
+  #       post = ""
+  #       name = ""
+  #       url = "https://github.com/YukiIsait/Blog/"
+  #       title = "GitHub"
+  #   [languages.zh-cn.params]
+  #     [languages.zh-cn.params.search]
+  #       enable = true
+  #       type = "algolia"
+  #       contentLength = 4000
+  #       placeholder = ""
+  #       maxResultLength = 10
+  #       snippetLength = 50
+  #       highlightTag = "em"
+  #       absoluteURL = false
+  #       [languages.zh-cn.params.search.algolia]
+  #         index = ""
+  #         appID = ""
+  #         searchKey = ""
+  #     [languages.zh-cn.params.home]
+  #       rss = 10
+  #       [languages.zh-cn.params.home.profile]
+  #         enable = true
+  #         gravatarEmail = ""
+  #         avatarURL = "/images/avatar.png"
+  #         title = ""
+  #         subtitle = "记录分享，自我提升与学习成长的自留地"
+  #         typeit = true
+  #         social = true
+  #         disclaimer = ""
