--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
-publish = "public"
-command = "hugo"
+  publish = "public"
+  command = "hugo --gc --minify"
+  [build.environment]
+    HUGO_VERSION = "0.114.0"
 
 [context.production.environment]
-HUGO_VERSION = "0.114.0"
-HUGO_ENV = "production"
-HUGO_ENABLEGITINFO = "true"
+  HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
