--- a/hugo.toml
+++ b/hugo.toml
@@ -708,7 +708,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
     # 位于 "themes/LoveIt/assets/data/cdn/" 目录
     # 可以在你的项目下相同路径存放你自己的数据文件:
     # "assets/data/cdn/"
-    data = "cdnjs.yml"
+    data = "jsdelivr.yml"
 
   # Compatibility config
   # 兼容性设置
